# magic-mirror

./: .gitignore  README.md
doc/: API.txt  WeatherConditionCodes.txt  openweather.txt  setup.txt
frontend/: form.html  password.html
src/: CMakeLists.txt
src/dependency/restbed/include/corvusoft/restbed/: http.hpp  request.hpp  response.hpp
src/src/MagicMirror/: main.cpp
src/src/include/: API.h  HandlerGETallNews.h  HandlerGETnews.h  HandlerGETtime.h  HandlerGETweather.h  HandlerPOSTaddnews.h  HandlerPOSTlogin.h  LoginManager.h  MainSystem.h  shared.h
src/src/source/: API.cpp  HandlerGETallNews.cpp  HandlerGETnews.cpp  HandlerGETtime.cpp  HandlerGETweather.cpp  HandlerPOSTaddnews.cpp  HandlerPOSTlogin.cpp  LoginManager.cpp  MainSystem.cpp  shared.cpp
src/src/tests/: tests.cpp
stuff/rustbed/calculator_back-end/: CalcResourceFactory.cpp  main.cpp
stuff/rustbed/getHTTP/: main.cpp
stuff/rustbed/my/: BossVerification.h  Logic.h  main.cpp  mySession.h  test1.cpp  test2.cpp
stuff/rustbed/restbed_simpleExample/: main.cpp
